@@ -1,3 +1,7 @@
+efa 1.1.1 - Mon Apr 26 2010
+
+    * Add short options
+
 efa 1.1 - Sun Jan 17 2010
 
     * Code cleanup and DRY-ing
